--- a/app/src/main/res/layout/activity_home_customer.xml
+++ b/app/src/main/res/layout/activity_home_customer.xml
@@ -63,7 +63,7 @@ tools:context=".Home_Customer">
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-    <!--ImageButton
+    <ImageButton
         android:id="@+id/cart_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,7 +74,7 @@ tools:context=".Home_Customer">
         app:layout_constraintBottom_toBottomOf="@+id/menu_back"
         app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
         app:layout_constraintStart_toEndOf="@+id/home_button"
-        app:layout_constraintTop_toTopOf="@+id/menu_back" /-->
+        app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
     <ImageButton
         android:id="@+id/orders_button"
