--- a/app/src/main/res/layout/activity_item_preview.xml
+++ b/app/src/main/res/layout/activity_item_preview.xml
@@ -61,9 +61,9 @@
 
     <TextView
         android:id="@+id/quantity_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity goes here"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
