--- a/app/src/main/res/layout/myorders_card.xml
+++ b/app/src/main/res/layout/myorders_card.xml
@@ -14,6 +14,7 @@
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -23,18 +24,29 @@
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Product"
+                    android:text="Order"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="21dp"/>
+                    android:textSize="25dp" />
 
                 <TextView
                     android:id="@+id/status"
-                    android:layout_width="82dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignEnd="@id/name"
-                    android:layout_marginEnd="-282dp"
+                    android:layout_alignRight="@id/name"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginEnd="1000dp"
                     android:text=""
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/name"
+                    android:layout_marginEnd="-319dp"
+                    android:background="@color/endColor"
+                    android:text="VIEW"
                     android:textColor="@color/white" />
 
 
