--- a/app/src/main/res/layout/activity_checkout_page.xml
+++ b/app/src/main/res/layout/activity_checkout_page.xml
@@ -33,6 +33,7 @@
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
+
         <ImageButton
             android:id="@+id/home_button"
             android:layout_width="wrap_content"
@@ -46,7 +47,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-        <!--ImageButton
+        <ImageButton
             android:id="@+id/cart_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
             app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
             app:layout_constraintStart_toEndOf="@+id/home_button"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" /-->
+            app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
         <ImageButton
             android:id="@+id/orders_button"
