--- a/app/src/main/res/layout/orders_customer_card.xml
+++ b/app/src/main/res/layout/orders_customer_card.xml
@@ -27,7 +27,7 @@
                     android:text="Order"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="25dp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/status"
@@ -43,10 +43,9 @@
                     android:id="@+id/view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/name"
-                    android:layout_marginEnd="-319dp"
+                    android:layout_marginStart="259dp"
                     android:background="@color/endColor"
-                    android:text="VIEW"
+                    android:text="View"
                     android:textColor="@color/white" />
 
 
