--- a/app/src/main/res/layout/activity_checkout_page.xml
+++ b/app/src/main/res/layout/activity_checkout_page.xml
@@ -293,7 +293,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Total: "
+        android:text=""
         android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -301,7 +301,20 @@
         app:layout_constraintHorizontal_bias="0.108"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expiryDate"
-        app:layout_constraintVertical_bias="0.819" />
+        app:layout_constraintVertical_bias="0.766" />
+
+    <TextView
+        android:id="@+id/total_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:text="Total: "
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expiryDate"
+        app:layout_constraintVertical_bias="0.322" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
