--- a/app/src/main/res/layout/activity_checkout_page.xml
+++ b/app/src/main/res/layout/activity_checkout_page.xml
@@ -103,18 +103,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar5"
         app:layout_constraintVertical_bias="0.019" />
 
-    <Button
-        android:id="@+id/finalOrderButton"
-        android:layout_width="125dp"
-        android:layout_height="38dp"
-        android:background="@color/startColor"
-        android:text="Order"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.963" />
-
     <!--<TextView
         android:id="@+id/deliveryAddress"
         android:layout_width="wrap_content"
@@ -129,6 +117,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.292" /> -->
 
+
+    <Button
+        android:id="@+id/finalOrderButton"
+        android:layout_width="125dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/startColor"
+        android:text="Order"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.828"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/expiryDate"
+        app:layout_constraintVertical_bias="0.798" />
 
     <EditText
         android:id="@+id/firstName"
@@ -307,14 +309,16 @@
         android:id="@+id/total_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="10dp"
         android:text="Total: "
         android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/finalOrderButton"
+        app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expiryDate"
-        app:layout_constraintVertical_bias="0.322" />
+        app:layout_constraintVertical_bias="0.669" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
