--- a/app/src/main/res/layout/card2.xml
+++ b/app/src/main/res/layout/card2.xml
@@ -12,12 +12,13 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="111dp"
+                android:layout_height="76dp"
                 android:padding="10dp">
 
                 <TextView
@@ -26,24 +27,25 @@
                     android:layout_height="50dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="13dp"
-                    android:layout_marginEnd="228dp"
-                    android:layout_marginBottom="38dp"
+                    android:layout_marginBottom="20dp"
                     android:text="Store"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
                     android:textSize="21dp" />
 
                 <Button
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:text="go"
-                    android:layout_marginStart="300dp"
                     android:id="@+id/go_to_store_button"
-                    />
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:layout_alignBottom="@+id/name"
+                    android:layout_marginStart="325dp"
+                    android:layout_marginBottom="-13dp"
+                    android:background="@color/endColor"
+                    android:text="go"
+                    android:textColor="@color/white" />
 
 
             </RelativeLayout>
