--- a/app/src/main/res/layout/order_view_card.xml
+++ b/app/src/main/res/layout/order_view_card.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
+            android:layout_margin="10dp"
             app:cardElevation="10dp">
             <RelativeLayout
                 android:layout_width="match_parent"
