--- a/app/src/main/res/layout/orders_customer_card.xml
+++ b/app/src/main/res/layout/orders_customer_card.xml
@@ -27,7 +27,7 @@
                     android:text="Order"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="12sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/status"
@@ -42,10 +42,11 @@
                 <Button
                     android:id="@+id/view"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="20dp"
                     android:layout_marginStart="259dp"
                     android:background="@color/endColor"
                     android:text="View"
+                    android:textSize="10sp"
                     android:textColor="@color/white" />
 
 
