--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -12,7 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+            app:cardElevation="10dp"
+            android:layout_margin="10dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,7 +26,7 @@
                     android:text="Product Name:"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="21sp"/>
+                    android:textSize="20sp"/>
 
                 <TextView
                     android:id="@+id/product_price"
@@ -35,16 +36,18 @@
                     android:text="Price: "
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
-                    android:textSize="21sp"/>
+                    android:textSize="20sp"/>
 
                 <Button
                     android:id="@+id/preview_btn"
-                    android:layout_width="100dp"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="151dp"
+                    android:layout_marginStart="140dp"
                     android:layout_marginEnd="14dp"
                     android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/product_name"
+                    android:background="@color/endColor"
+                    android:textColor="@color/white"
                     android:text="Preview" />
 
 
